[Feat] 특정 공연 정보 조회 api 구현 (#15)
* feat: feat/12 기능 통합

* feat: 등급 repository 연결

* feat: 등급, 공연 도메인 서비스 구현 및 커스텀 예외(주석)

* feat: 특정 공연 정보 서비스 로직

* feat: 특정 공연 정보 api 구현 및 dto 설정

* docs: 등급 설정 seed

* chore: 브랜치 병합 충돌 해결